refactor: use toList (#35)